chore: Update navbar links and GitHub icon

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,8 +6,8 @@ import Principal from '../components/SectionMain/Principal.astro';
 ---
 
 <Layout title="Ejercicios Javascript">
-	<header class="w-full font-lapizTexto bg-white flex sticky top-0 text-center items-center justify-between px-9 py-5 ">
-		<img class=" shadow-lg border-[1px] border-black  transition-all ease-in-out duration-75 hover:scale-110  rounded-lg hover:shadow-md hover:shadow-black " src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ7wnhfNI2OH744CZjlwlUXdgVRDKnuJJNLlw&s" width="42px" alt="">
+	<header class="w-full font-lapizTexto bg-white flex  text-center items-center justify-between px-9 py-5 ">
+		<img class="  border-[1px] border-black  transition-all ease-in-out duration-75 hover:scale-105  rounded-lg hover:shadow-sm hover:shadow-black " src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ7wnhfNI2OH744CZjlwlUXdgVRDKnuJJNLlw&s" width="40px" alt="">
 		<Navbar />
 	</header>
 	<main class=" max-w-5xl m-auto ">
