--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,5 +24,7 @@ const { title } = Astro.props;
 	</body>
 </html>
 <style is:global>
-	
+	body{
+		background-image: url("https://aprendejavascript.org/assets/bg-circuit.svg");
+	}
 </style>
