--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import Principal from '../components/SectionMain/Principal.astro';
 ---
 
 <Layout title="Ejercicios Javascript">
-	<header class="w-full font-lapizTexto bg-white flex  text-center items-center justify-between px-9 py-5 ">
+	<header class="w-full font-lapizTexto bg-transparent shadow-md flex  text-center items-center justify-between px-9 py-5 ">
 		<img class="  border-[1px] border-black  transition-all ease-in-out duration-75 hover:scale-105  rounded-lg hover:shadow-sm hover:shadow-black " src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ7wnhfNI2OH744CZjlwlUXdgVRDKnuJJNLlw&s" width="40px" alt="">
 		<Navbar />
 	</header>
@@ -18,5 +18,9 @@ import Principal from '../components/SectionMain/Principal.astro';
 	
 	</main>
 </Layout>
+
+<style>
+	
+</style>
 
 
