Update main section title and content

--- a/src/components/SectionMain/Titulo.astro
+++ b/src/components/SectionMain/Titulo.astro
@@ -5,6 +5,36 @@
         </div>
      <img class="rotate-3" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ7wnhfNI2OH744CZjlwlUXdgVRDKnuJJNLlw&s" width="100px" alt="Logo Javascrit">
     </div>
-    <p class="font-lapizTexto text-center text-lg mt-5">Aquí encontrarás ejercicios de Javascript para practicar tus habilidades</p>
-     
+    <p class="font-lapizTexto text-center text-lg mt-5 py-5 ">
+        Aquí encontrarás <span class="text-[#facc15] font-bold">30</span> ejercicios de Javascript diseñados para 
+        <span class="font-bold text-[#facc15]">fortalecer</span> tus habilidades y <span class="font-bold text-[#facc15]">dominar</span> conceptos clave. 
+        Desde lo básico hasta desafíos avanzados, cada ejercicio está creado para ayudarte a 
+        <span class="font-bold uppercase">convertirte en un experto en JavaScript</span>.
+      </p>
+      <article class="grid grid-cols-2 items-center text-center gap-5">
+        <div>
+          <h4 class="text-xl font-bold mb-3">Habilidades</h4>
+          <ul class=" max-w-[35%] mx-auto">
+            <div>
+             |   
+            
+            </div>
+            <li class="bg-[#facc15] text-white  rotate-3 font-bold">Resolución</li>
+            <li class="bg-[#facc15] my-4 text-white  rotate-[-3] font-bold">Lógica</li>
+            <li>Optimización</li>
+            <li>Estructuras</li>
+          </ul>
+        </div>
+        <div>
+          <h4 class="text-xl font-bold mb-3">Conceptos</h4>
+          <ul class=" pl-5 text-left">
+            <li>Condicionales</li>
+            <li>Funciones</li>
+            <li>Bucles</li>
+            <li>Arrays y objetos</li>
+          </ul>
+        </div>
+      </article>
+      
+        
 </section>
