Update main section title and content

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import Layout from '../layouts/Layout.astro';
 import Navbar from '../components/navbar.astro';
 import Titulo from '../components/SectionMain/Titulo.astro';
 import Principal from '../components/SectionMain/Principal.astro';
+import Subtitulo from '../components/SectionMain/Subtitulo.astro';
 ---
 
 <Layout title="Ejercicios Javascript">
@@ -12,6 +13,7 @@ import Principal from '../components/SectionMain/Principal.astro';
 	</header>
 	<main class=" max-w-5xl m-auto ">
 		<Titulo />
+		<Subtitulo />
 		<section class="flex justify-center flex-col gap-9">
 			<Principal />
 		</section>
