style: Update background color in Layout.astro

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -25,7 +25,7 @@ const { title } = Astro.props;
 </html>
 <style is:global>
 	body{
-		background-image: url("https://aprendejavascript.org/assets/bg-circuit.svg");
+		background-color: white;
 	}
 
 </style>
