style: Update navbar links and remove unused GitHub icon
Remove the unused GitHub icon and update the navbar links in the navbar component. This improves the visual appearance and functionality of the navbar.

style: Update background color in Layout.astro

Update the background color in the Layout.astro file. This change modifies the styling of the layout to enhance the overall design.

style: Remove empty style block in Layout.astro and index.astro

Remove the empty style block in the Layout.astro and index.astro files. This cleanup improves the code readability and removes unnecessary code.

chore: Update npm dependencies and add @midudev/tailwind-animations package

Update the npm dependencies and add the @midudev/tailwind-animations package. This ensures that the project is using the latest dependencies and adds new animations capabilities.

style: Fix typo in navbar link text

Fix a typo in the navbar link text. This correction ensures that the link text is spelled correctly.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,16 +8,20 @@ import Subtitulo from '../components/SectionMain/Subtitulo.astro';
 ---
 
 <Layout title="Ejercicios Javascript">
-	<header class="  bg-white w-full font-lapizTexto bg-transparent shadow-md flex  text-center items-center justify-between px-9 py-5 ">
+	<header class="  w-full font-lapizTexto bg-transparent  flex  text-center items-center justify-between px-9 py-5 ">
 		<img class=" animate-fade-in border-[1px] border-black  transition-all ease-in-out duration-75 hover:scale-105  rounded-lg hover:shadow-sm hover:shadow-black " src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ7wnhfNI2OH744CZjlwlUXdgVRDKnuJJNLlw&s" width="40px" alt="">
 		<Navbar />
 	</header>
 	<main class=" flex flex-col gap-6    max-w-5xl m-auto  my-5">
-		<section class="bg-white text-center rounded-sm shadow-md px-2">
+		<section class=" text-center rounded-sm  px-2 h-[90vh]">
 			<Titulo />
 			<Subtitulo />
+			<div class="text-center flex justify-center flex-col">
+			    <button class="">Comenzemos</button>
+				<svg  xmlns="http://www.w3.org/2000/svg" width="24" height="24"><path d="m12 15.586-4.707-4.707a1 1 0 0 0-1.414 1.414l5.293 5.293a.996.996 0 0 0 1.414 0l5.293-5.293a1 1 0 0 0-1.414-1.414L12 15.586z"/></svg>
+			</div>
 			
-			<button class="">Comenzemos</button>
+			  
 			
 		</section>
 	
