style: Update navbar links and remove unused GitHub icon
- Update navbar links to improve user experience
- Remove unused GitHub icon for cleaner design

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,12 +9,11 @@ import BotonInicio from '../components/SectionMain/botonInicio.astro';
 ---
 
 <Layout title="Ejercicios Javascript">
-	<header class="  w-full font-lapizTexto bg-transparent  flex  text-center items-center justify-between px-9 py-5 ">
-		<img class=" animate-fade-in border-[1px] border-black  transition-all ease-in-out duration-75 hover:scale-105  rounded-lg hover:shadow-sm hover:shadow-black " src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ7wnhfNI2OH744CZjlwlUXdgVRDKnuJJNLlw&s" width="40px" alt="">
+	<header class="  w-full font-lapizTexto px-9 py-5 ">
 		<Navbar />
 	</header>
-	<main class=" flex flex-col gap-6    max-w-5xl m-auto  my-5">
-		<section class=" text-center rounded-sm   px-2 h-[90vh]">
+	<main class=" flex flex-col gap-6  max-w-5xl mx-auto ">
+		<section class="  text-center  rounded-sm  px-2 ">
 			<Titulo />
 			<Subtitulo />
 			<BotonInicio />
