--- a/src/components/SectionMain/botonInicio.astro
+++ b/src/components/SectionMain/botonInicio.astro
@@ -1,9 +1,11 @@
-<div id="butonComenzar" class="text-center flex justify-center flex-col">
-    <h3 class="">Comenzemos</h3>
+<div id="butonComenzar" class="text-center flex justify-center gap-3 flex-col">
+    <h3 class="font-medium  " >Comenzar</h3>
     <div class=" divbuttom">
         <svg  class="mx-auto" xmlns="http://www.w3.org/2000/svg" width="24" height="24"><path d="m12 15.586-4.707-4.707a1 1 0 0 0-1.414 1.414l5.293 5.293a.996.996 0 0 0 1.414 0l5.293-5.293a1 1 0 0 0-1.414-1.414L12 15.586z"/></svg>
     </div>
-</div>   	
+</div>  
+
+
 
 <style>
 	.divbuttom{
@@ -11,9 +13,11 @@
   margin: auto;
   border: 1px solid rgb(156, 154, 154);
   border-radius: 9px;
-  height: 50px;
+  height: 55px;
   padding: 2px 3px;
   overflow: hidden;
+  animation: moveButonss 2s ease-in-out infinite; 
+
 }
 .divbuttom svg{
 	cursor: pointer;
@@ -27,7 +31,16 @@
         transform: translateY(0); 
     }
     50% {
-        transform: translateY(100%); /* Sube 10px a la mitad de la animación */
+        transform: translateY(100%); 
+    }
+}
+@keyframes moveButonss {
+  0%, 100% {
+       
+    }
+    50% {
+      background-color: #f7df1e85;
+        
     }
 }
 </style>
