--- a/src/components/SectionMain/Titulo.astro
+++ b/src/components/SectionMain/Titulo.astro
@@ -2,7 +2,7 @@
 <section class="container mx-auto py-5">
     <div class="flex items-center justify-center gap-2 text-center ">
         <div class="w-72">
-            <h1 class="font-lapizTitulo  text-6xl font-bold text-center">Ejercicios JavaScript</h1>
+            <h1 class="font-lapizTitulo  text-[65px] font-bold text-center">CodeMaster</h1>
         </div>
      <img class="rotate-3" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ7wnhfNI2OH744CZjlwlUXdgVRDKnuJJNLlw&s" width="100px" alt="Logo Javascrit">
     </div>
