--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,4 +23,15 @@ const { title } = Astro.props;
 		<slot />
 	</body>
 </html>
+<style is:global>
+body {
+	background-color: #fdfcfc;
+      background-image: linear-gradient(90deg, rgba(170, 170, 170, 0.1) 1px, transparent 1px), 
+                        linear-gradient(180deg, rgba(211, 209, 209, 0.1) 1px, transparent 1px);
+      background-size: 90px 60px; /* Tamaño de las celdas */
+      margin: 0;
+      padding: 0;
+      min-height: 100vh;
+}
+</style>
 
