--- a/src/components/SectionMain/Principal.astro
+++ b/src/components/SectionMain/Principal.astro
@@ -5,7 +5,7 @@ import { ObjetoPractica } from "../../js/ObjetoPractica"
 
 {
 ObjetoPractica.map((practica) => (
-    <section class="flex flex-col  bg-white py-7 px-7 rounded shadow-sm">
+    <section class="flex flex-col gap-3  bg-white py-7 px-7 mb-8 rounded shadow-sm border-[1px] border-[#f5f5f5]">
         <div class=" w-[40%]">
         <h2 class="font-lapizTitulo text-3xl mb-3 font-bold  ">{practica.NumeroEjercicio} : {practica.nombre}</h2>
         </div>
