--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -1,12 +1,14 @@
-<nav class="text-end flex justify-end">
+<link rel="stylesheet" href="/src/css/banner-github-link.css">
+
+<nav class="flex justify-center lg:justify-end">
     <ul>
       <li>
-        <a class="relative shadow-2xl" href="https://github.com/z6nc/EjerciciosWebJS" target="_blank">
+        <a class="relative shadow-2xl" href="https://github.com/z6nc/EjerciciosWebJS" target="_blank" aria-label="Ir a mi GitHub">
           <div id="ContenedorGit" class="relative flex gap-2 transform ease-in-out duration-100 hover:scale-110 ">
             <svg class="shadow-2xl" width="24" height="24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
               <path d="M12 0C5.37 0 0 5.37 0 12c0 5.29 3.44 9.78 8.2 11.37.6.1.82-.26.82-.57v-2.09c-3.34.73-4.05-1.56-4.05-1.56-.55-1.38-1.35-1.75-1.35-1.75-1.1-.75.08-.73.08-.73 1.22.09 1.87 1.26 1.87 1.26 1.08 1.84 2.82 1.31 3.51 1.01.1-.78.42-1.31.76-1.61-2.67-.3-5.47-1.34-5.47-5.96 0-1.32.47-2.41 1.24-3.26-.12-.3-.54-1.5.12-3.12 0 0 1.01-.32 3.31 1.23.96-.27 1.98-.41 3-.41s2.04.14 3 .41c2.29-1.55 3.3-1.23 3.3-1.23.67 1.62.24 2.82.12 3.12.77.85 1.24 1.94 1.24 3.26 0 4.62-2.8 5.66-5.48 5.96.43.37.81 1.1.81 2.21v3.28c0 .31.21.67.83.57C20.56 21.78 24 17.29 24 12c0-6.63-5.37-12-12-12z" />
             </svg>
-             <span class="bg-[#f3f4f6]">
+             <span id="icon-btn-github" class="bg-[#f3f4f6]">
                 
              </span>
           </div>
@@ -15,27 +17,5 @@
     </ul>
   </nav>
   
-  <style> 
-  span{
-    border-radius: 10px;
-     border: 1px solid rgb(194, 194, 194);
-  }
-    span::before {
-        content: "CodeMasterJS ⭐️";
-        padding: 1px 15px;
-        font-size: 13px;
-        filter: grayscale(80%);
-    }
-    span:hover::before {
-        filter: grayscale(10%);
-    }
-    #ContenedorGit:hover span{
-        background-color:rgba(254, 240, 138, 0.897);
-
-    }
-    #ContenedorGit:hover span::before{
-        filter: grayscale(0%);
-    }
-   
-  </style>
+ 
   
