style: Update styles in main section and navbar links
- Update the styles in the main section and navbar links to improve the visual appearance and user experience.
- Rename the IDs of elements in the navbar to improve code readability and maintainability.
- Update fonts and styles in the main section to ensure consistency and enhance the overall design.
- Remove the unused GitHub icon from the navbar to declutter the interface.
- Add new CSS animation for the "Comenzar" button in the main section.

--- a/src/components/SectionMain/Subtitulo.astro
+++ b/src/components/SectionMain/Subtitulo.astro
@@ -1,6 +1,10 @@
-<article class="grid grid-cols-2 items-center text-center gap-5 mb-9">
-    <div>
-      <h4 class="text-xl font-bold mb-3 uppercase pb-4">Habilidades</h4>
+---
+const subtitleStyle ="text-xl font-bold mb-3 uppercase pb-4"
+---
+
+<article class="grid grid-cols-1 lg:grid-cols-2 items-center text-center gap-5 mb-9">
+    <div class="skills-container">
+      <h4 class={subtitleStyle}>Habilidades</h4>
       <ul class="flex justify-center gap-8 items-center">
         <div class="flex flex-col gap-4">
           <li class="bg-[#fb923c] text-white px-5 py-1 -rotate-2 font-bold shadow-lg">Resolución</li>
@@ -13,8 +17,8 @@
       </ul>
     </div>
     
-    <div>
-      <h4 class="text-xl font-bold mb-3 uppercase pb-4">Conceptos</h4>
+    <div class="concepts-container">
+      <h4 class={subtitleStyle}>Conceptos</h4>
       <ul class="flex justify-center gap-8 items-center">
         <div class="flex flex-col gap-4">
           <li class="bg-[#34d399] text-white px-5 py-1 -rotate-2 font-bold shadow-lg">Condicionales</li>
