--- a/src/components/SectionMain/Titulo.astro
+++ b/src/components/SectionMain/Titulo.astro
@@ -7,12 +7,10 @@
      <img class="rotate-3" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ7wnhfNI2OH744CZjlwlUXdgVRDKnuJJNLlw&s" width="100px" alt="Logo Javascrit">
     </div>
     <p class="font-lapizTexto text-center text-lg mt-5 py-5 ">
-        Aquí encontrarás <span class="text-[#facc15] font-bold">30</span> ejercicios de Javascript diseñados para 
-        <span class="font-bold text-[#facc15]">fortalecer</span> tus habilidades y <span class="font-bold text-[#facc15]">dominar</span> conceptos clave. 
+        Aquí encontrarás <span class="text-colorjs font-bold">30</span> ejercicios de Javascript diseñados para 
+        <span class="font-bold text-colorjs">fortalecer</span> tus habilidades y <span class="font-bold text-colorjs">dominar</span> conceptos clave. 
         Desde lo básico hasta desafíos avanzados, cada ejercicio está creado para ayudarte a 
         <span class="font-bold uppercase">convertirte en un experto en JavaScript</span>.
       </p>
-     
-      
-        
+         
 </section>
