refactory array object js

--- a/src/components/SectionMain/Principal.astro
+++ b/src/components/SectionMain/Principal.astro
@@ -31,6 +31,14 @@ ObjetoPractica.map((practica) => (
                 Ver respuesta
             </button>
         </div>
+         <article>
+            <h3 class="font-bold font-lapizTitulo text-2xl">Solución :</h3>
+            <p class="font-lapizTexto text-[17px] py-2 text-gray-500">
+                {practica.PrimeraForma}
+            </p>
+
+         </article>
+           
     </section>
 ))}
 
