--- a/src/components/SectionMain/botonInicio.astro
+++ b/src/components/SectionMain/botonInicio.astro
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="../css/animation-btn-main.css">
+<link rel="stylesheet" href="/src/css/animation-btn-main.css">
 
 <div id="butonComenzar" class="flex  flex-col justify-center text-center gap-3">
     <h3 class="font-medium">Comenzar</h3>
