--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="css/banner-github-link.css">
+<link rel="stylesheet" href="/src/css/banner-github-link.css">
 
 <nav class="flex justify-center lg:justify-end">
     <ul>
