--- a/src/components/SectionMain/Principal.astro
+++ b/src/components/SectionMain/Principal.astro
@@ -33,15 +33,19 @@ ObjetoPractica.map((practica) => (
         </div>
 
          {/* Respuestas  */}
-         <section  class="container-solucion hidden ">
+         <section  class="container-solucion hidden  ">
             <div class="flex text-center mb-2 ">
-                <h3 class="font-bold font-lapizTitulo text-2xl">Soluciones</h3>
+                <h3 class="font-bold font-lapizTitulo text-3xl">Soluciones :</h3>
             </div>
             <div class="flex flex-col gap-6">
                 {
                     practica.soluciones.map((solucion) => (
-                        <div id="content-codigo-solucion" class=" transition-all duration-75 ease-in-out hover:shadow-md p-3  rounded-md hover:border-r-2 hover:border-t-2 border-yellow-300">
-                            <h4 class="font-bold font-lapizTexto ">{solucion.forma} </h4>
+                        <div id="content-codigo-solucion" class=" border-[1px] border-gray-300 rounded-md p-3  ">
+                            <div class=" flex  justify-between items-center text-center">
+                                 <h4 class="font-bold font-lapizTexto text-xl ">{solucion.forma} </h4>
+                                 <a target="_blank" class="text-sm bg-[#f0db4f] rounded-md px-3 py-1  font-bold"   href={solucion.link}>{solucion.metodo}</a>
+                            </div>
+                            <p class="text-gray-500 py-2 "> {solucion.explicacion}</p>
                             <pre class="bg-white"><code class="language-js ">
                                 {solucion.codigo}
                             </code></pre>
