Refactor styles in main section and navbar links, and update link appearance in JavaScript

--- a/src/components/SectionMain/Principal.astro
+++ b/src/components/SectionMain/Principal.astro
@@ -43,7 +43,7 @@ ObjetoPractica.map((practica) => (
                         <div id="content-codigo-solucion" class="p-3 border-b-[1px] border-gray-500 ">
                             <div class=" flex  justify-between items-center text-center">
                                  <h4 class="font-bold font-lapizTexto text-xl ">{solucion.forma} </h4>
-                                 <a target="_blank" class="text-sm bg-[#f0db4f] rounded-md px-3 py-1  font-bold"   href={solucion.link}>{solucion.metodo}</a>
+                                 <a target="_blank" class="text-sm border-[1px] border-[#ffe11e] bg-[#f0da4f0c] rounded-md px-3 py-1  font-bold transition-all duration-75 ease-in  hover:bg-[#ffe642a6] "   href={solucion.link}>{solucion.metodo}</a>
                             </div>
                             <p class="text-gray-500 py-2 "> {solucion.explicacion}</p>
                             <pre class="bg-white"><code class="language-js ">
