--- a/src/components/SectionMain/botonInicio.astro
+++ b/src/components/SectionMain/botonInicio.astro
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/src/css/animation-btn-main.css">
+<!-- <link rel="stylesheet" href="/src/css/animation-btn-main.css"> -->
 
 <div id="butonComenzar" class="flex  flex-col justify-center text-center gap-3">
     <h3 class="font-medium">Comenzar</h3>
@@ -8,6 +8,44 @@
 </div>  
 
 
+<style>
+
+.animated-btn-container{
+    background-color: rgb(255, 255, 255);
+    margin: auto;
+    border: 1px solid rgb(156, 154, 154);
+    border-radius: 9px;
+    height: 65px;
+    padding: 2px 3px;
+    overflow: hidden;
+    animation: moveButonss 2s ease-in-out infinite; 
+  
+  }
+  .animated-btn-container svg{
+      cursor: pointer;
+      border-radius: 40%;
+        outline: none; /* Quita el borde al enfocar */
+      position: relative; /* Importante para animar la posición */
+      animation: moveButon 2s ease-in-out infinite; 
+  }
+  @keyframes moveButon {
+    0%, 100% {
+          transform: translateY(0); 
+      }
+      50% {
+          transform: translateY(100%); 
+      }
+  }
+  @keyframes moveButonss {
+    0%, 100% {
+         
+      }
+      50% {
+        background-color: #f7df1e85;
+          
+      }
+  }
+</style>
 
 
 
