--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/src/css/banner-github-link.css">
+<!-- <link rel="stylesheet" href="/src/css/banner-github-link.css"> -->
 
 <nav class="flex justify-center lg:justify-end">
     <ul>
@@ -16,6 +16,31 @@
       </li>
     </ul>
   </nav>
+
+  <style>
+    /* Estilos de Banner github Repositorio */
+#icon-btn-github{
+    border-radius: 10px;
+     border: 1px solid rgb(194, 194, 194);
+  }
+  #icon-btn-github::before {
+        content: "CodeMasterJS ⭐️";
+        padding: 1px 15px;
+        font-size: 13px;
+        filter: grayscale(80%);
+    }
+    #icon-btn-github:hover::before {
+        filter: grayscale(10%);
+    }
+    #ContenedorGit:hover #icon-btn-github{
+        background-color:rgba(254, 240, 138, 0.897);
+
+    }
+    #ContenedorGit:hover #icon-btn-github::before{
+        filter: grayscale(0%);
+    }
+   
+  </style>
   
  
   
