--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import Titulo from '../components/SectionMain/Titulo.astro';
 import Principal from '../components/SectionMain/Principal.astro';
 import Subtitulo from '../components/SectionMain/Subtitulo.astro';
 import BotonInicio from '../components/SectionMain/botonInicio.astro';
+import Dificultad from '../components/SectionMain/dificultad.astro';
 ---
 
 <Layout title="CodeMasterJS">
@@ -21,8 +22,9 @@ import BotonInicio from '../components/SectionMain/botonInicio.astro';
 
          <!-- Seccion de problemas js -->
 		<section class="flex justify-center flex-col gap-9">
-			<article class="flex justify-center flex-col">
+			<article class="flex justify-center flex-col gap-6">
 				<h3 class="text-center font-lapizTitulo font-semibold  text-5xl mb-6 ">Ejercicios JavaScript</h3>
+				<Dificultad />
 				<Principal />
 			</article>
 		</section>
