Refactor styles in main section and navbar links, and update Dificultad component

--- a/src/components/SectionMain/dificultad.astro
+++ b/src/components/SectionMain/dificultad.astro
@@ -1,4 +1,6 @@
 ---
+const ContainerEstilo = "flex justify-center items-center gap-4 bg-white border-[1px] border-gray-200 rounded-lg py-2  trasition-all duration-75 ease-in  "
+
 const dificultades = [
   {
     nombre: "Facil",
@@ -16,14 +18,13 @@ const dificultades = [
     estilo:" hover:border-red-500 hover:bg-[#ff161622]"
   },
 ]
-const hola = "flex justify-center items-center gap-4 bg-white border-[1px] border-gray-200 rounded-lg py-2 "
 ---
 
 <section class="Container-Dificultad grid grid-cols-3 text-center gap-6  font-lapizTitulo  ">
     {
         dificultades.map((dificultad) => (
-            <article class= {dificultad.estilo}> 
-                <div >
+            <article class={`${ContainerEstilo} ${dificultad.estilo}`}> 
+                <div class="subcontainer-info">
                     <h3 class=" text-xl">{dificultad.nombre}</h3>
                     {dificultad.nombre === "Facil" && (
                     <span class="text-green-500">{dificultad.icono}</span>
@@ -33,10 +34,9 @@ const hola = "flex justify-center items-center gap-4 bg-white border-[1px] borde
                     )}  {dificultad.nombre === "Dificil" && (
                     <span class="text-red-500">{dificultad.icono}</span>
                     )}
-
                 </div>
-                <span class="text-slate-900 cursor-pointer ">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 ml-2" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 9-7 7-7-7"/></svg>
+                <span class="text-slate-900 cursor-pointer  ">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 ml-2" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 9-7 7-7-7"/></svg>
                 </span>
             </article>
         ))
@@ -44,17 +44,3 @@ const hola = "flex justify-center items-center gap-4 bg-white border-[1px] borde
            
 </section>
 
-<style>
-    article{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 4px;
-        background-color: white;
-        border: 1px solid #d1d5db;
-        border-radius: 0.375rem;
-        padding: 0.5rem 1rem;
-        transition: all 0.2s ease-in;
-       
-    }
-</style>
