--- a/src/components/SectionMain/Principal.astro
+++ b/src/components/SectionMain/Principal.astro
@@ -4,9 +4,7 @@ import { ObjetoPractica } from "../../js/ObjetoPractica"
 ---
 {
 ObjetoPractica.map((practica) => (
-   
-  
-    <section class="flex flex-col gap-3  bg-white py-7 px-7 mb-8 rounded shadow-sm border-[1px] border-[#f5f5f5]">
+    <section class=" contanier-ejercicio   flex flex-col gap-3  bg-white py-7 px-7 mb-8 rounded shadow-sm border-[1px] border-[#f5f5f5]">
         <div class="container-subtitulo w-full flex justify-between items-center mb-3">
             <h2 class="font-lapizTitulo text-3xl  font-bold  ">{practica.NumeroEjercicio} : {practica.nombre}</h2>
             {practica.dificultad === "Fácil" && (
@@ -19,9 +17,11 @@ ObjetoPractica.map((practica) => (
             <span class="text-red-500">▰▰▰</span>
             )}
         </div>
+
         <p class="font-lapizTexto text-[17px] py-2 text-gray-500">
             {practica.descripcion}
         </p>
+        
         <div class="py-4">
             <h3 class="font-bold font-lapizTitulo text-2xl">Restricciones :</h3>
             <ul class="font-lapizTexto list-disc text-[17px]  text-gray-500 mx-6">
@@ -33,11 +33,12 @@ ObjetoPractica.map((practica) => (
                 
             </ul>
         </div>
+        
         <pre class="bg-white"><code class="language-js ">
             {practica.CasosPrueba}
         </code>
        </pre>
-        
+        {/* Boton de respuesta */}
         <div class=" btn-respuesta flex items-center justify-between px-4 w-full py-2    rounded-xl  cursor-pointer  bg-[#ffe642a6] hover:bg-[#ffe642] ">
             <button  class="text-black font-bold ">
                 Solución
@@ -73,12 +74,15 @@ ObjetoPractica.map((practica) => (
     </section>
 ))}
 
-
+<style>
+    .contanier-ejercicio {
+        content-visibility: auto;
+    }
+</style>
 
 <script>
 window.addEventListener('DOMContentLoaded', () => {
     const buttons = document.querySelectorAll('.btn-respuesta');
-    const exits = document.querySelectorAll('.btn-exit-solucion');
     const solutions = document.querySelectorAll('.container-solucion');
 
     buttons.forEach((button, index) => {
