--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,6 @@
 ---
+	import Footer from '../components/layout/footer.astro';
+	import Navbar from '../components/layout/Navbar.astro';
 interface Props {
 	title: string;
 }
@@ -7,20 +9,28 @@ const { title } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="es">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
-		<link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&family=Patrick+Hand&family=Comic+Neue:wght@300&display=swap" rel="stylesheet">
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.28.0/themes/prism-tomorrow.min.css" rel="stylesheet" />
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+		<link rel="icon" type="image/svg+xml" href="/public/favicon.svg" />
+		<!-- link de preCode  -->
+		<link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.28.0/themes/prism-tomorrow.min.css" rel="stylesheet" /> 
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.28.0/prism.min.js"></script>	  
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
 	<body>
+		<header class="w-full font-lapizTexto px-9 py-5 ">
+			<Navbar />
+		</header>
 		<slot />
+	    <Footer />
+		
 	</body>
 </html>
 <style is:global>
@@ -28,7 +38,8 @@ body {
 	background-color: #fdfcfc;
       background-image: linear-gradient(90deg, rgba(170, 170, 170, 0.1) 1px, transparent 1px), 
                         linear-gradient(180deg, rgba(211, 209, 209, 0.1) 1px, transparent 1px);
-      background-size: 90px 60px; /* Tamaño de las celdas */
+      background-size: 90px 60px; 
+	  font-family: "Montserrat", serif;
       margin: 0;
       padding: 0;
       min-height: 100vh;
