--- a/src/components/Section/ExercisesSection.astro
+++ b/src/components/Section/ExercisesSection.astro
@@ -1,13 +1,12 @@
 ---
-import ExerciseCard from "../exercises/ExerciseCard.astro";
-import Dificultad from "./dificultad.astro";
+import { ExerciseCard } from "../exercises/ExerciseCard";
 import TituloUI from "../UI/TituloUI.astro";
 import BackToHome from "../UI/BackToHome.astro";
 ---
 
 <section class="flex justify-center flex-col gap-9">
-    <TituloUI title={"Ejercicios"} />
+    <TituloUI  title={"Ejercicios"} />
     <BackToHome  texto={"regresar"}/>
   <!-- <Dificultad /> -->
-  <ExerciseCard />
+  <ExerciseCard  client:idle />
 </section>
