Refactor UI components: update headings to h2, enhance styling for abilities and concepts lists, and add aria-label for accessibility in ExerciseCard

--- a/src/components/UI/Subtitulo.astro
+++ b/src/components/UI/Subtitulo.astro
@@ -8,22 +8,22 @@ const concepts = ["Condicionales", "Funciones", "Bucles", "Arrays y objetos"];
 
 <article class="grid grid-cols-1 lg:grid-cols-2 items-center text-center gap-5 my-4 cursor-default">
     <div class="skills-container">
-      <h4 class={subtitleStyle}>Habilidades</h4>
+      <h2 class={subtitleStyle}>Habilidades</h2>
       <ul class=" w-96 flex flex-wrap justify-center gap-8  mx-auto  ">
          {
           abilities.map((ability) => (
-            <li class="w-44 px-5 py-2 bg-orange-400 text-white  font-semibold rounded-md ">{ability}</li>
+            <li class="w-44 px-5 py-2 bg-orange-500 border-2 border-orange-600 text-white  font-semibold rounded-md ">{ability}</li>
           ))
          }
       </ul>
     </div>
     
     <div class="concepts-container">
-      <h4 class={subtitleStyle}>Conceptos</h4>
+      <h2 class={subtitleStyle}>Conceptos</h2>
       <ul class=" w-96 flex flex-wrap justify-center gap-8  mx-auto ">
        {
           concepts.map((concept) => (
-            <li class="w-44 px-5 py-2 bg-[#34d399] text-white  font-semibold rounded-md">{concept}</li>
+            <li class="w-44 px-5 py-2 bg-green-600 border-2 border-green-700 text-white  font-semibold rounded-md">{concept}</li>
           ))
        }
       </ul>
