--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,14 +18,11 @@ const { title } = Astro.props;
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 		<link rel="icon" type="image/svg+xml" href="/public/favicon.svg" />
-		<!-- link de preCode  -->
-		<link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.28.0/themes/prism-tomorrow.min.css" rel="stylesheet" /> 
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.28.0/prism.min.js"></script>	  
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
 	<body>
-		<header class="w-full font-lapizTexto px-9 py-5 ">
+		<header class="w-full  px-9 py-5 ">
 			<Navbar />
 		</header>
 		<slot />
