Add Loading component and improve ExerciseCard structure; enhance TituloUI image aspect ratio and Ejercicios page layout

--- a/src/components/UI/TituloUI.astro
+++ b/src/components/UI/TituloUI.astro
@@ -4,5 +4,5 @@ const { title } = Astro.props;
 
 <div class="w-full inline-flex flex-wrap justify-center items-center gap-3 ">
     <h1 class="text-5xl lg:text-6xl font-bold text-center ">{title}</h1>
-    <img class="w-16 lg:w-24 rotate-3 rounded-lg drop-shadow-logo" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ7wnhfNI2OH744CZjlwlUXdgVRDKnuJJNLlw&s" width="96"  alt="Logo Javascrit">
+    <img class="w-16 lg:w-24 rotate-3 rounded-lg drop-shadow-logo aspect-3/2" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ7wnhfNI2OH744CZjlwlUXdgVRDKnuJJNLlw&s" width="96"  alt="Logo Javascrit">
 </div>
