--- a/src/pages/Ejercicios.astro
+++ b/src/pages/Ejercicios.astro
@@ -6,7 +6,7 @@ import ExercisesSection from '../components/Section/ExercisesSection.astro';
 ---
 
 <Layout title="CodeMasterJS">
-	<main class=" flex flex-col gap-6  max-w-5xl mx-auto ">
+	<main class=" flex flex-col gap-6  max-w-5xl mx-auto min-h-[900px] ">
          <!-- Seccion de problemas js -->
          <ExercisesSection  />
 	</main>
