Update layout titles and meta tags for improved SEO and user experience

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,13 +12,19 @@ const { title } = Astro.props;
 <html lang="es">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
+		<meta http-equiv="Content-Language" content="es">
+		<meta http-equiv="X-Frame-Options" content="SAMEORIGIN">
+		<meta name="description" content="Mejora tu lógica de programación con CodeMaster JS. Resuelve ejercicios y pruebas técnicas en JavaScript para desarrollar tus habilidades.">
 		<meta name="viewport" content="width=device-width" />
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
+		<meta name="keywords" content="Ejercicios de JavaScript, pruebas técnicas, lógica de programación, desafíos de JS, aprender JavaScript">
+		<meta name="mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+
 		<title>{title}</title>
 	</head>
 	<body>
