--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -4,7 +4,7 @@ import Boton from '../components/UI/Boton.astro';
 
 ---
 
-<Layout title="CodeMasterJS">
+<Layout title="CodeMaster JS | Ejercicios y Pruebas Técnicas en JavaScript">
 	<main class=" flex flex-col gap-6  items-center  justify-center max-w-5xl mx-auto   lg:h-[80vh]"> 
         <h1 class="text-9xl font-bold drop-shadow-Titulo">404</h1>
         <p class="text-3xl">Pagina no encontrada - Aun no disponible</p>
