--- a/src/pages/Ejercicios.astro
+++ b/src/pages/Ejercicios.astro
@@ -5,7 +5,7 @@ import ExercisesSection from '../components/Section/ExercisesSection.astro';
 
 ---
 
-<Layout title="CodeMasterJS">
+<Layout title="CodeMaster JS | Ejercicios y Pruebas Técnicas en JavaScript">
 	<main class=" flex flex-col gap-6  max-w-5xl mx-auto min-h-[900px] ">
          <!-- Seccion de problemas js -->
          <ExercisesSection  />
