--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ const CategoriasUnicas = [...new Set(ObjetoPractica.map(practica => practica.cat
 
 ---
 
-<Layout title="CodeMasterJS">
+<Layout title="CodeMaster JS | Ejercicios y Pruebas Técnicas en JavaScript">
 	
 	<main class=" max-w-5xl mx-auto lg:h-[100vh] ">
 		<!-- Seccion de titulos -->
